cmake_minimum_required(VERSION 3.19)
project(LM_chapters)

set(CMAKE_CXX_STANDARD 14)

add_executable(paycheck Lab_6.1/paycheck.cpp)
add_executable(proverb Lab_6.1/proverb.cpp)
add_executable(newproverb Lab_6.1/newproverb.cpp)
add_executable(nested Lab_5/nested.cpp)
add_executable(for Lab_5/for.cpp)
add_executable(billfile Lab_5/billfile.cpp)
add_executable(dowhile Lab_5/dowhile.cpp)
add_executable(sentinel Lab_5/sentinel.cpp)
add_executable(while Lab_5/while.cpp)
add_executable(circlearea Lab_2/circlearea.cpp)
add_executable(stringchar Lab_2/stringchar.cpp)
add_executable(name Lab_2/name.cpp)
add_executable(runprob Lab_1/runprob.cpp)
add_executable(switch Lab_4/switch.cpp)
add_executable(price Lab_7/price.cpp)
add_executable(selection_sort Lab_8/selection_sort.cpp)
add_executable(righttrig Lab_3/righttrig.cpp)
add_executable(linear_search Lab_8/linear_search.cpp)
add_executable(LogicalOp Lab_4/LogicalOp.cpp)
add_executable(tabledata Lab_3/tabledata.cpp)
add_executable(semiprob Lab_1/semiprob.cpp)
add_executable(firstprog Lab_1/firstprog.cpp)
add_executable(student Lab_7/student.cpp)
add_executable(bubble_sort Lab_8/bubble_sort.cpp)
add_executable(scope Lab_6.2/scope.cpp)
add_executable(bill Lab_3/bill.cpp)
add_executable(grades Lab_4/grades.cpp)
add_executable(initialize Lab_4/initialize.cpp)
add_executable(money Lab_6.2/money.cpp)
add_executable(batavg Lab_3/batavg.cpp)
add_executable(logicprob Lab_1/logicprob.cpp)
add_executable(binary_search Lab_8/binary_search.cpp)
add_executable(convertmoney Lab_6.2/convertmoney.cpp)
add_executable(quartsal Lab_7/quartsal.cpp)
add_executable(testscore Lab_7/testscore.cpp)
