cmake_minimum_required(VERSION 3.19)
project(Labs)

set(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_FLAGS "-Wall -Werror")

add_executable(Labs_A Lab_A.cpp)
add_executable(Labs_B Lab_B.cpp)
add_executable(Labs_C Lab_C.cpp)
add_executable(MidTerms MidTerms.cpp)
add_executable(Labs_D Lab_D.cpp)
add_executable(Labs_E Lab_E.cpp)
add_executable(Labs_F Lab_F.cpp)
add_executable(Labs_G Lab_G.cpp)
add_executable(Labs_H Lab_H.cpp)
